--- a/booking/templates/booking/booking_requests.html
+++ b/booking/templates/booking/booking_requests.html
@@ -50,7 +50,7 @@
                                             data-name="{% if booking.user %}{{ booking.user.first_name }} {{ booking.user.last_name }}{% else %}{{ booking.guest.first_name }} {{ booking.guest.last_name }}{% endif %}"
                                             data-phone="{% if booking.user %}{{ booking.user.profile.phone|default:'-' }}{% else %}{{ booking.guest.phone_number }}{% endif %}"
                                             data-email="{% if booking.user %}{{ booking.user.email }}{% else %}{{ booking.guest.email }}{% endif %}"
-                                            data-license="{% if booking.user %}{{ booking.user.profile.license_number|default:'-' }}{% else %}{{ booking.guest.license_number }}{% endif %}"
+                                            data-license="{% if booking.user %}{{ booking.user.profile.license_no|default:'-' }}{% else %}{{ booking.guest.license_number }}{% endif %}"
                                             
                                             data-profile-url="{% if booking.user %}{% url 'public_profile' booking.user.id %}{% endif %}"
                                             data-price-per-day="{{ booking.car.price_per_day }}"
@@ -220,7 +220,9 @@
                     profileLink.classList.remove('hidden');
                     profileLink.style.display = 'inline-flex';
                 } else {
-                    profileLink.classList.add('hidden');
+                        profileLink.href = '#';
+                        profileLink.classList.add('hidden');
+                        profileLink.style.display = 'none';// เพื่อบังคับซ่อนทันที
                 }
             }
 
